--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
         "@gitops-services/*": ["src/gitops/services/*"],
         "@rollout-models/*": ["src/rollout/models/*"],
         "@rollout-services/*": ["src/rollout/services/*"],
+        "@es-models/*": ["src/externalsecrets/*"],
         "@images/*": ["src/images/*"]
       }
   },
