--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.3",
     "react-router": "5.3.x",
+    "react-router-dom-v5-compat": "^6.22.0",
     "react-router-dom": "5.3.x",
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.49.7",
