Try updating package refs to fix singleton issue

--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "@cypress/webpack-preprocessor": "^5.15.5",
     "@openshift-console/dynamic-plugin-sdk": "1.1.0",
     "@openshift-console/dynamic-plugin-sdk-internal": "1.0.0",
-    "@openshift-console/dynamic-plugin-sdk-webpack": "1.0.1",
+    "@openshift-console/dynamic-plugin-sdk-webpack": "1.0.2",
     "@openshift-console/plugin-shared": "^0.0.1",
     "@patternfly/react-core": "5.1.1",
     "@patternfly/react-icons": "5.1.1",
     "@patternfly/react-styles": "5.1.1",
     "@patternfly/react-table": "5.1.1",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.40",
+    "@types/react": "^17.0.2",
     "@types/react-helmet": "^6.1.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -51,7 +51,7 @@
     "pluralize": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-stylelint": "^0.4.2",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.3",
