Downgrade react to 17.0.1 from 17.0.2

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@patternfly/react-styles": "5.1.1",
     "@patternfly/react-table": "5.1.1",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.2",
+    "@types/react": "^17.0.1",
     "@types/react-helmet": "^6.1.4",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -51,8 +51,8 @@
     "pluralize": "^8.0.0",
     "prettier": "^2.7.1",
     "prettier-stylelint": "^0.4.2",
-    "react": "^17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.3",
     "react-router": "5.3.x",
