--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gitops-admin-plugin",
-  "version": "0.2.0",
+  "version": "0.3.3",
   "private": true,
   "repository": "git@github.com:gnunn-gitops/gitops-console-plugin.git",
   "license": "Apache-2.0",
@@ -23,13 +23,14 @@
     "@cypress/webpack-preprocessor": "^5.15.5",
     "@openshift-console/dynamic-plugin-sdk": "1.4.0",
     "@openshift-console/dynamic-plugin-sdk-webpack": "1.1.1",
-    "@patternfly/react-core": "5.1.1",
-    "@patternfly/react-icons": "5.1.1",
-    "@patternfly/react-styles": "5.1.1",
-    "@patternfly/react-table": "5.1.1",
+    "@patternfly/react-core": "^5.1.1",
+    "@patternfly/react-icons": "^5.1.1",
+    "@patternfly/react-styles": "^5.1.1",
+    "@patternfly/react-table": "^5.1.1",
     "@types/node": "^18.0.0",
-    "@types/react": "^17.0.1",
+    "@types/react": "^17.0.37",
     "@types/react-helmet": "^6.1.4",
+    "@types/react-router-dom": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
     "copy-webpack-plugin": "^6.4.1",
@@ -41,7 +42,6 @@
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.1",
-    "git-url-parse": "^13.1.0",
     "i18next-parser": "^3.11.0",
     "mocha-junit-reporter": "^2.2.0",
     "mochawesome": "^7.1.3",
@@ -54,20 +54,24 @@
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.3",
     "react-router": "5.3.x",
-    "react-router-dom-v5-compat": "^6.22.0",
     "react-router-dom": "5.3.x",
-    "resolve-url-loader": "^5.0.0",
-    "sass": "^1.49.7",
-    "sass-loader": "^12.4.0",
+    "react-router-dom-v5-compat": "^6.22.0",
     "style-loader": "^3.3.1",
     "stylelint": "^15.3.0",
     "stylelint-config-standard": "^31.0.0",
     "ts-loader": "^9.3.1",
     "ts-node": "^10.8.1",
-    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^4.7.4",
     "webpack": "5.75.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.7.4",
+
+    "@types/react-dom": "16.8.4",
+    "@types/react-router": "^5.1.20",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
+    "resolve-url-loader": "^5.0.0",
+    "git-url-parse": "^13.1.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0"
   }
 }
