Disable feature flag check in console extensions as it is broken in 4.16, other minor improvements

--- a/console-extensions.json
+++ b/console-extensions.json
@@ -12,11 +12,11 @@
     },
     {
         "type": "console.navigation/section",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "id": "gitops",
             "insertAfter": "workloads",
@@ -26,11 +26,11 @@
     },
     {
         "type": "console.navigation/resource-ns",
-        "flags": {
-            "required": [
-                "APPLICATIONSET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATIONSET"
+        //     ]
+        // },
         "properties": {
             "id": "applicationset",
             "name": "%plugin__gitops-admin-plugin~ApplicationSets%",
@@ -45,11 +45,11 @@
     },
     {
         "type": "console.navigation/resource-ns",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "id": "application",
             "name": "%plugin__gitops-admin-plugin~Applications%",
@@ -64,11 +64,11 @@
     },
     {
         "type": "console.navigation/resource-ns",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "id": "appproject",
             "name": "%plugin__gitops-admin-plugin~Projects%",
@@ -83,11 +83,11 @@
     },
     {
         "type": "console.page/resource/list",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -101,11 +101,11 @@
     },
     {
         "type": "console.page/resource/details",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -119,11 +119,11 @@
     },
     {
         "type": "console.action/resource-provider",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -137,11 +137,11 @@
     },
     {
         "type": "console.yaml-template",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "name": "default",
             "model": {
@@ -156,11 +156,11 @@
     },
     {
         "type": "console.action/resource-provider",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -174,11 +174,11 @@
     },
     {
         "type": "console.page/resource/list",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -192,11 +192,11 @@
     },
     {
         "type": "console.page/resource/details",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -210,11 +210,11 @@
     },
     {
         "type": "console.yaml-template",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "name": "default",
             "model": {
@@ -240,11 +240,11 @@
     },
     {
         "type": "console.page/resource/list",
-        "flags": {
-            "required": [
-                "APPLICATIONSET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATIONSET"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -258,11 +258,11 @@
     },
     {
         "type": "console.page/resource/details",
-        "flags": {
-            "required": [
-                "APPLICATIONSET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATIONSET"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -287,11 +287,11 @@
     },
     {
         "type": "console.navigation/resource-ns",
-        "flags": {
-            "required": [
-                "ROLLOUT"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "ROLLOUT"
+        //     ]
+        // },
         "properties": {
             "id": "rollout",
             "name": "%plugin__gitops-admin-plugin~Rollouts%",
@@ -307,11 +307,11 @@
     },
     {
         "type": "console.page/resource/list",
-        "flags": {
-            "required": [
-                "ROLLOUT"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "ROLLOUT"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -325,11 +325,11 @@
     },
     {
         "type": "console.action/resource-provider",
-        "flags": {
-            "required": [
-                "ROLLOUT"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "ROLLOUT"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -343,11 +343,11 @@
     },
     {
         "type": "console.page/resource/details",
-        "flags": {
-            "required": [
-                "ROLLOUT"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "ROLLOUT"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "argoproj.io",
@@ -361,11 +361,11 @@
     },
     {
         "type": "console.yaml-template",
-        "flags": {
-            "required": [
-                "ROLLOUT"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "ROLLOUT"
+        //     ]
+        // },
         "properties": {
             "name": "default",
             "model": {
@@ -380,11 +380,11 @@
     },
     {
         "type": "console.dashboards/overview/inventory/item",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "mapper": {
                 "$codeRef": "ApplicationInventory.getApplicationStatusGroups"
@@ -396,11 +396,11 @@
     },
     {
         "type": "console.dashboards/overview/inventory/item/group",
-        "flags": {
-            "required": [
-                "APPLICATION"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATION"
+        //     ]
+        // },
         "properties": {
             "icon": {
                 "$codeRef": "ApplicationInventory.HealthSuspendedIcon"
@@ -410,11 +410,11 @@
     },
     {
         "type": "console.dashboards/overview/inventory/item",
-        "flags": {
-            "required": [
-                "APPLICATIONSET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "APPLICATIONSET"
+        //     ]
+        // },
         "properties": {
             "mapper": {
                 "$codeRef": "ApplicationSetInventory.getApplicationSetStatusGroups"
@@ -437,11 +437,11 @@
     },
     {
         "type": "console.navigation/resource-ns",
-        "flags": {
-            "required": [
-                "EXTERNAL_SECRET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "EXTERNAL_SECRET"
+        //     ]
+        // },
         "properties": {
             "id": "externalsecret",
             "name": "%plugin__gitops-admin-plugin~ExternalSecrets%",
@@ -457,11 +457,11 @@
     },
     {
         "type": "console.page/resource/list",
-        "flags": {
-            "required": [
-                "EXTERNAL_SECRET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "EXTERNAL_SECRET"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "external-secrets.io",
@@ -475,11 +475,11 @@
     },
     {
         "type": "console.action/resource-provider",
-        "flags": {
-            "required": [
-                "EXTERNAL_SECRET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "EXTERNAL_SECRET"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "external-secrets.io",
@@ -493,11 +493,11 @@
     },
     {
         "type": "console.page/resource/details",
-        "flags": {
-            "required": [
-                "EXTERNAL_SECRET"
-            ]
-        },
+        // "flags": {
+        //     "required": [
+        //         "EXTERNAL_SECRET"
+        //     ]
+        // },
         "properties": {
             "model": {
                 "group": "external-secrets.io",
