--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,6 @@
         "react": [ "./node_modules/@types/react" ]
       }
   },
+  "exclude": ["**/node_modules", "**/dist"],
   "include": ["src"]
 }
